syntax = "proto3";

package llm;

// Định nghĩa service chính cho Orchestrator
service LlmOrchestratorService {
  // Gửi 1 yêu cầu chat duy nhất, nhận kết quả phân tích + changeset
  rpc ChatOnce (LlmChatRequest) returns (LlmChatResponse);
  
  // AI Chat: Generate text response
  rpc GenerateText (GenerateTextRequest) returns (GenerateTextResponse);
  
  // AI Chat: Generate code
  rpc GenerateCode (GenerateCodeRequest) returns (GenerateCodeResponse);
  
  // AI Recommend: Tư vấn mô hình kinh doanh phù hợp
  rpc RecommendBusinessModel (RecommendModelRequest) returns (RecommendModelResponse);
  
  // Switch business model và trigger Helm deployment
  rpc SwitchBusinessModel (SwitchModelRequest) returns (SwitchModelResponse);
}

// ====== Request & Response ======

message LlmChatRequest {
  string message = 1;     // Câu hỏi hoặc yêu cầu nghiệp vụ tự nhiên
  string tenant_id = 2;   // Tenant đang thao tác
  string role = 3;        // Vai trò người dùng (admin, staff, ...)
  string lang = 4;        // Ngôn ngữ (vi, en, ...)
}

message LlmChatResponse {
  string proposal_text = 1;     // Văn bản đề xuất của LLM
  Changeset changeset = 2;      // Tập thay đổi cấu hình hệ thống
  Metadata metadata = 3;        // Thông tin ngữ nghĩa (intent, confidence, risk)
}

// ====== Nested Structures ======

message Changeset {
  string model = 1;                 // Tên model / domain entity bị ảnh hưởng
  repeated Feature features = 2;    // Danh sách key-value thay đổi
  repeated string impacted_services = 3; // Các service bị ảnh hưởng
}

message Feature {
  string key = 1;
  string value = 2;
}

message Metadata {
  string intent = 1;       // Hành động hoặc ý định của người dùng
  double confidence = 2;   // Độ tin cậy của model
  string risk = 3;         // Mức độ rủi ro: low / medium / high
}

// ====== AI Chat Messages ======

message GenerateTextRequest {
  string prompt = 1;               // User message/prompt
  repeated ContextMessage context = 2;  // Conversation context
}

message GenerateTextResponse {
  string text = 1;                 // AI generated text response
}

message GenerateCodeRequest {
  string prompt = 1;               // Code generation prompt
  repeated ContextMessage context = 2;  // Context for code generation
}

message GenerateCodeResponse {
  string code = 1;                 // Generated code
  string language = 2;             // Programming language
  string explanation = 3;          // Explanation of the code
}

message ContextMessage {
  string role = 1;                 // 'user' or 'assistant'
  string content = 2;              // Message content
}

// ====== Business Model Recommendation ======

message RecommendModelRequest {
  string business_description = 1;  // Mô tả về doanh nghiệp/sản phẩm
  string target_audience = 2;       // Đối tượng khách hàng mục tiêu
  string revenue_preference = 3;    // Mong muốn về doanh thu (một lần, định kỳ, freemium)
  string lang = 4;                  // Ngôn ngữ (vi, en)
}

message RecommendModelResponse {
  string greeting = 1;              // Lời chào thân thiện
  string recommendation_intro = 2;  // Giới thiệu ngắn về đề xuất
  string recommended_model = 3;     // retail, subscription, freemium, multi
  string why_this_fits = 4;         // Giải thích tại sao phù hợp
  string how_it_works = 5;          // Giải thích cách hoạt động
  repeated string next_steps = 6;   // Các bước tiếp theo
  string alternatives_intro = 7;    // Giới thiệu các lựa chọn khác
  repeated ModelAlternative alternatives = 8; // Các lựa chọn khác
  string closing = 9;               // Lời kết
}

message ModelAlternative {
  string model = 1;                 // retail, subscription, freemium, multi
  string brief_reason = 2;          // Lý do ngắn gọn
}

// ====== Switch Business Model ======

message SwitchModelRequest {
  string to_model = 1;              // Model muốn chuyển sang: retail, subscription, freemium, multi
  string tenant_id = 2;             // Tenant ID
  bool dry_run = 3;                 // Nếu true, chỉ generate YAML mà không deploy
}

message SwitchModelResponse {
  bool success = 1;                 // Thành công hay không
  string message = 2;               // Thông báo
  string changeset_path = 3;        // Đường dẫn file changeset YAML
  bool deployed = 4;                // Đã deploy chưa
  bool dry_run = 5;                 // Có phải dry run không
  string error = 6;                 // Lỗi nếu có
}
